# otel-cli

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  install.sh  release-please-config.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: otel-cli
.github/workflows/: bump-version.yml  ci.yml  release-please.yml  release.yml
examples/: demo_exporter.rs
proto/: query.proto
skills/otel-cli/: SKILL.md
src/: cli.rs  install.rs  lib.rs  main.rs  proto.rs  store.rs  telemetry.rs
src/client/: clear.rs  log.rs  metrics.rs  mod.rs  shutdown.rs  sql.rs  status.rs  trace.rs  view.rs
src/query/: arrow_convert.rs  arrow_schema.rs  datafusion_ctx.rs  mod.rs  table_provider.rs
src/query/sql/: convert.rs  eval_logs.rs  eval_metrics.rs  eval_traces.rs  mod.rs  parser.rs
src/server/: mod.rs  otlp_grpc.rs  otlp_http.rs  query_grpc.rs
src/tui/: event.rs  mod.rs  tabs.rs  ui.rs
tests/: e2e_client.rs  integration_otlp_grpc.rs  integration_otlp_http.rs  integration_query.rs
