[package]
name = "otel-cli"
version = "1.1.1"
edition = "2021"

[lib]
name = "otel_cli"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "otel-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
axum = "0.8"
ratatui = "0.30"
crossterm = "0.29"
serde_json = "1"
anyhow = "1"
bytes = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
sqlparser = "0.53"
regex = "1"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
tempfile = "3"
rand = "0.9"
